--- a/en/about_en.html
+++ b/en/about_en.html
@@ -217,7 +217,7 @@
 					<div>
 						<img src="../images/consultant5.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">CTO</h3>
-						<h3>David Murillo</h3>
+						<h3>David Sanchez</h3>
 						<p>More than 15 years of work experience as senior IT engineer, Network Engineer, Software Engineer, Cloud solution architect, IT product preSale.</p>
 						<p></p>
 					</div>
