--- a/en/news_en.html
+++ b/en/news_en.html
@@ -65,6 +65,48 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
+					<a href="../news/20231207/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20231207/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">07</span>
+							<span class="mos">Dec</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="../news/20231207/news_en.html">BOI & Alibaba.com Workshop</a></h3>
+						<p>7th December 2023, BOI and Alibaba.com had a workshop in Cobo Calleja office. BOI CEO Yanik, Alibaba.com South Europe director Andy Chen
+							introduced Alibaba.com B2B policy to the Chinese successful entrepreneur.</p>
+
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="../news/20231207/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="../news/20231018/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20231018/2.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">18</span>
+							<span class="mos">Oct</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="../news/20231018/news_en.html">BOI CEO Yanik Visited CAINIAO Warehouse in Madrid</a></h3>
+						<p>18th October 2023, BOI CEO Yanik Visited CAINIAO Warehouse in Madrid, and negotiated business.</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="../news/20231018/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
 					<a href="../news/20230711/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20230711/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">11</span>
