--- a/products.html
+++ b/products.html
@@ -51,6 +51,7 @@
 				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>
 				<p class="breadcrumbs">
 				<p>
+					<a href="products/alibaba/alibaba.html" class="btn btn-green px-3 py-3"> Alibaba.com国际站</a>
 					<a href="products/mobile/mobile.html" class="btn btn-green px-3 py-3"> 智能手机</a>
 					<a href="products/network/network.html" class="btn btn-green px-3 py-3"> 网络设备</a>
 					<a href="products/security/security.html" class="btn btn-green px-3 py-3"> 安保设备</a>
@@ -85,11 +86,32 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="products/mobile/mobile.html" class="block-20 d-flex align-items-end" style="background-image: url('products/mobile/smartphone.jpg');">
+					<a href="products/alibaba/alibaba.html" class="block-20 d-flex align-items-end" style="background-image: url('products/alibaba/alibaba.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
-							<span class="yr">2023</span>
+							<span class="yr">2024</span>
 						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products/alibaba/alibaba.html">Alibaba.com国际站</a></h3>
+						<p href="products/alibaba/alibaba.html">睿泽国际作为Alibaba.com国际站的西班牙官方合作伙伴，为广大商家、厂家提供上架Alibaba.com国际站的服务，点击查看详情</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="products/alibaba/alibaba.html" class="btn btn-secondary">查看详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="products/mobile/mobile.html" class="block-20 d-flex align-items-end" style="background-image: url('products/mobile/smartphone.jpg');">
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="yr">2023</span>-->
+<!--						</div>-->
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/mobile/mobile.html">智能手机</a></h3>
@@ -107,10 +129,10 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a href="products/network/network.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="yr">2023</span>
-						</div>
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="day">New</span>-->
+<!--							<span class="yr">2023</span>-->
+<!--						</div>-->
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/network/network.html">网络设备</a></h3>
@@ -126,10 +148,10 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a href="products/security/security.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/security/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="yr">2023</span>-->
+<!--						</div>-->
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/security/security.html">安保设备</a></h3>
@@ -143,10 +165,10 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a href="products/solar/solar.html" class="block-20 d-flex align-items-end" style="background-image: url('products/solar/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="yr">2023</span>-->
+<!--						</div>-->
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/solar/solar.html">光伏设备</a></h3>
@@ -161,10 +183,10 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a href="products/battery/battery.html" class="block-20 d-flex align-items-end" style="background-image: url('products/battery/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="yr">2023</span>-->
+<!--						</div>-->
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/battery/battery.html">储能设备</a></h3>
