--- a/products/alibaba/alibaba.html
+++ b/products/alibaba/alibaba.html
@@ -33,7 +33,6 @@
 				<li class="nav-item"><a href="../../index.html" class="nav-link">首页</a></li>
 				<li class="nav-item active"><a href="../../products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
-
 				<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
@@ -51,7 +50,7 @@
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
 				<a href="../../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
-				<h1 class="mb-2 bread">网络设备</h1>
+				<h1 class="mb-2 bread">Alibaba.com国际站</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="../alibaba/alibaba.html">Alibaba.com国际站<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
@@ -59,43 +58,32 @@
 					<span class="mr-2"><a href="../security/security.html">安保设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
-				</p>
 			</div>
         </div>
     </div>
 </section>
 
 
-<section class="ftco-section bg-light">
+
+<section class="ftco-section">
 	<div class="container">
-		<div class="row" class = "wrapper">
+		<div class="row" >
+			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="intro/01.jpg">
+				</div>
 
-<!--			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="huawei/huaweinetwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/huawei/1.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="yr">NEW</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="huawei/huaweinetwork.html">华为企业业务产品</a></h3>-->
-<!--						<p>引领数字基础设施，共创行业新价值。携手伙伴，深入场景，为客户创造价值，以创新基础设施，释放数字生产力。</p>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-
-
-			<div class="col-md-5 col-lg-12 ftco-animate">
-				<div class="blog-entry">
-					<a href="ruijie/ruijienwtwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/ruijie/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="yr">NEW</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ruijie/ruijienwtwork.html">锐捷网络产品</a></h3>
-						<p>让技术与应用充分融合，创造性地解决客户问题，促进社会进步。</p>
-					</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="intro/03.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="intro/04.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="intro/05.jpg">
+				</div>
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="intro/02.jpg">
 				</div>
 			</div>
 		</div>
@@ -103,14 +91,75 @@
 </section>
 
 
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div id = "rowBlogs" class="row" class = "wrapper">
 
-<section class="ftco-intro" style="background-image: url(../../ittech/network/network.jpg);" data-stellar-background-ratio="0.5">
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('basic.jpg');">
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a >GGS Basic套餐</a></h3>
+						<p >购买Alibaba.com基础套餐成为基础商家，就可以在国际站上开店，相继就可以再店铺后台开始进行产品信息发布，店铺装修、报价、与买家在线联系等。</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('plus.jpg');">
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a >GGS Plus套餐</a></h3>
+						<p >GGS Plus套餐相较于基础套餐拥有更多的橱窗数量、更多的子账号数量、更多的商品发布数量、和更好的商品曝光率。</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('verified.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">五星推荐</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3  class="heading"><a href="#">Verified套餐</a></h3>
+						<p >金品诚企会员（Verified Supplier）
+							是经阿里巴巴平台权威实力验真的优质供应商，通过线上线下结合的方式，平台对商家的企业资质、商品资质、企业能力等全方位实力进行认证验真和实力透传。
+							除享有出口通会员服务，金品诚企会员还享有专属营销权益、专属前台场景及丰富工具权益。</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</section>
+
+
+
+<section class="ftco-section">
+	<div class="container">
+		<div class="row" >
+			<div class="col-md-4 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
+				<div  class="row wrapper align-items-stretch">
+					<img class = "wrapper" style="width: 100%" src="intro/06.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+<section class="ftco-intro" style="background-image: url(../../images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<h2>释放数字生产力 共创行业新价值</h2>
-				<br>
 				<h2>商业洽谈请扫码联系</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
@@ -140,6 +189,8 @@
 
 
 
+
+
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
 		<div class="row mb-5">
@@ -161,6 +212,7 @@
 
 				</div>
 			</div>
+
 
 
 			<div class="col-md-6 col-lg-3">
