--- a/products/mobile/mobile.html
+++ b/products/mobile/mobile.html
@@ -53,6 +53,7 @@
 				<a href="../../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
 				<h1 class="mb-2 bread">智能手机</h1>
 				<p class="breadcrumbs">
+					<span class="mr-2"><a href="../alibaba/alibaba.html">Alibaba.com国际站<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../security/security.html">安保设备 <i class="ion-ios-arrow-forward"></i></a></span>
@@ -74,8 +75,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x90pro.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">1099€</span>
+<!--							<span class="day">New</span>-->
+<!--							<span class="day">1099€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -94,8 +95,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/x80pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x80pro.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">929€</span>
+<!--							<span class="day">New</span>-->
+<!--							<span class="day">929€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -114,8 +115,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="day">359€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -136,8 +137,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/v235g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v23.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">409€</span>
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="day">409€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -158,8 +159,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/v21" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v21.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">299€</span>
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="day">299€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -180,8 +181,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/y765g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y76.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">259€</span>
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="day">259€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -202,8 +203,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/y72" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y72.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">199€</span>
+<!--							<span class="day">NEW</span>-->
+<!--							<span class="day">199€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -224,8 +225,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/y35" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y35.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">235€</span>
+<!--							<span class="day">New</span>-->
+<!--							<span class="day">235€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
@@ -243,8 +244,8 @@
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/y01" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y01.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">119€</span>
+<!--							<span class="day">New</span>-->
+<!--							<span class="day">119€</span>-->
 							<span class="yr">5台起售</span>
 						</div>
 					</a>
