--- a/products/products_case.html
+++ b/products/products_case.html
@@ -50,6 +50,7 @@
 				<a href="../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
 				<p class="breadcrumbs">
 				<p>
+					<a href="../products/alibaba/alibaba.html" class="btn btn-info px-4 py-3"> Alibaba.com国际站</a>
 					<a href="../products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
 					<a href="../products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>
 					<a href="../products/security/security.html" class="btn btn-info px-4 py-3"> 安保设备</a>
