--- a/products/solar/solar.html
+++ b/products/solar/solar.html
@@ -53,6 +53,7 @@
 				<a href="../../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
 				<h1 class="mb-2 bread">光伏设备</h1>
 				<p class="breadcrumbs">
+					<span class="mr-2"><a href="../alibaba/alibaba.html">Alibaba.com国际站<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../security/security.html">安保设备 <i class="ion-ios-arrow-forward"></i></a></span>
