--- a/en/products_en.html
+++ b/en/products_en.html
@@ -50,17 +50,12 @@
 <!--				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>-->
 				<p class="breadcrumbs">
 				<p>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Alibaba.com</a>
 					<a class="btn btn-green p-2" style="color: #f1f4f8"> Smartphone</a>
-					<a class="btn btn-green p-2" style="color: #f1f4f8"> Network Products</h5></a>
-					<a class="btn btn-green p-2" style="color: #f1f4f8"> Security Products</a>
-					<a class="btn btn-green p-2" style="color: #f1f4f8"> Solar Products</a>
-					<a class="btn btn-green p-2" style="color: #f1f4f8"> Energy Storage Products</a>
-
-<!--					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>-->
-<!--					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>-->
-<!--					<a href="products/security/security.html" class="btn btn-info px-4 py-3"> 安保设备</a>-->
-<!--					<a href="products/solar/solar.html" class="btn btn-info px-4 py-3"> 光伏设备</a>-->
-<!--					<a href="products/battery/battery.html" class="btn btn-info px-4 py-3"> 储能设备</a>-->
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Network</h5></a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Security</a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Solar</a>
+					<a class="btn btn-green p-2" style="color: #f1f4f8"> Energy Storage</a>
 				</p>
 			</div>
         </div>
@@ -87,14 +82,25 @@
 
 		<div class="row wrapper">
 
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/alibaba/alibaba.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2024</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a >Alibaba.com</a></h3>
+						<p>As Alibaba.com B2B platform Spain Authorized partner, BOI provide the service to register as seller in Alibaba.com.</p>
+					</div>
+				</div>
+			</div>
+
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/mobile/smartphone.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a >Smartphone</a></h3>
@@ -110,10 +116,6 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/network/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="yr">2023</span>
-						</div>
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a >Network Products</a></h3>
@@ -129,10 +131,6 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a  class="block-20 d-flex align-items-end" style="background-image: url('../ittech/security/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a >Security Products</a></h3>
@@ -146,10 +144,6 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/solar/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a >Solar Products</a></h3>
@@ -164,10 +158,6 @@
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
 					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/battery/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="yr">2023</span>
-						</div>
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a >Energy Storage Products</a></h3>
