--- a/news.html
+++ b/news.html
@@ -66,6 +66,47 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
+					<a href="news/20231207/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20231207/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">07</span>
+							<span class="mos">Dec</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="news/20231207/news.html">睿泽国际联合Alibaba.com国际站举办研讨会</a></h3>
+						<p>2023年12月07日， 睿泽国际联合Alibaba.com国际站，在Cobo Calleja办公室举办研讨会。瑞泽国际CEO Yanik、Alibaba.com南欧负责人Andy Chen给西班牙侨界成功企业家详细讲解了Alibaba.com国际站B2B销售策略。</p>
+
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="news/20231207/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="news/20231018/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20231018/2.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">18</span>
+							<span class="mos">Oct</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="news/20231018/news.html">睿泽国际CEO Yanik 应邀参观菜鸟西班牙马德里仓库</a></h3>
+						<p>2023年10月18日， 睿泽国际CEO Yanik 应邀参观菜鸟位于西班牙马德里的物流仓库、洽谈业务。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="news/20231018/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
 					<a href="news/20230711/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230711/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">11</span>
